Fixed line spacing
With Kamila and Soren

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -18,6 +18,7 @@ h1, h2 {
   font-family:'Montserrat', sans-serif;
   font-weight: 400;
   font-size: 4.0em;
+  line-height: normal;
 }
 
 h3 {
@@ -48,7 +49,7 @@ p {
 .primary-nav a {
   color: black;
   text-decoration: none;
-  font-size: 2vw;
+  /*font-size: 2vw;*/
 
 }
 
